tweak hero image

--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -345,13 +345,13 @@ header#masthead {
 
     .hero-image {
         margin: 0 auto;
-        width: 100%;
+        max-width: 100vw;
         background-image: var(--hero-img);
         background-position: top center;
         background-size: cover;
         background-repeat: no-repeat;
         aspect-ratio: 1.4/1;
-        margin-inline: @space-24 @space-18;
+        margin-right: @space-24;
 
     }
     .hero-text {
