--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -38,20 +38,22 @@
             <span></span>
           </span>
         </button>
-        <ul id="nav-menu">
-          <li>
-            <a href="#">Thundermail</a>
-          </li>
-          <li>
-            <a href="#">Appointment</a>
-          </li>
-          <li>
-            <a href="#">Send</a>
-          </li>
-          <li>
-            <button>Join Waitlist</button>
-          </li>
-        </ul>
+        <div id="nav-menu">
+          <ul>
+            <li>
+              <a href="#">Thundermail</a>
+            </li>
+            <li>
+              <a href="#">Appointment</a>
+            </li>
+            <li>
+              <a href="#">Send</a>
+            </li>
+            <li>
+              <button>Join Waitlist</button>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <header id="masthead">
