--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -50,7 +50,7 @@
               <a href="#">Send</a>
             </li>
             <li>
-              <button>Join Waitlist</button>
+              <button class="link-button">Join Waitlist</button>
             </li>
           </ul>
         </div>
