--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -619,7 +619,7 @@ section#reasons {
 }
 
 section#faq {
-    padding-top: @space-36;
+    padding-block: @space-36 @space-72;
 
     header {
         margin-bottom: @space-9;
@@ -703,6 +703,7 @@ section#details {
         ul {
             list-style: none;
             padding: 0;
+            margin-block: 0 @space-24;
             width: 100%;
 
             li + li {
