--- a/sites/tb.pro/includes/base/footer.html
+++ b/sites/tb.pro/includes/base/footer.html
@@ -1,7 +1,7 @@
 <footer id="tb-footer">
   <div id="site-nav">
     <a id="nav-link-home" href="#">
-      [tb logo]
+      {{ svg('tbpro/logo-tbpro') }}
     </a>
     <div class="site-nav-links">
       <a href="#">Home</a>
