tweaks some debug values

--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -481,7 +481,7 @@ section#features {
         // This is the real value from zeplin
         // border: solid 1px rgba(255, 255, 255, 0.05);
         // debug value
-        border: solid 1px rgba(255, 255, 255);
+        border: solid 1px green;
 
         color: var(--color-text-base);
 
@@ -499,8 +499,6 @@ section#features {
                 display: flex;
                 gap: @gutter;
 
-                // debug
-                border: 1px solid red;
                 .app-icon {
                     flex: 0 0 auto;
                     display: flex;
