working draft: centered nav elements in bar

--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -40,6 +40,7 @@
         </button>
         <div id="nav-menu">
           <ul>
+            <li>nada</li>
             <li>
               <a href="#">Thundermail</a>
             </li>
@@ -49,7 +50,7 @@
             <li>
               <a href="#">Send</a>
             </li>
-            <li>
+            <li class="nav-item-join-button">
               <button class="link-button">Join Waitlist</button>
             </li>
           </ul>
