--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -50,90 +50,6 @@ body {
 @space-max: 18rem;
 
 
-// ------------------------------------------------------------
-// Helpers
-// ------------------------------------------------------------
-
-// Generates prefixed span classes: .col.xs-1, .col.md-4, etc.
-.generate-prefixed-spans(@prefix, @i, @cols) when (@i > 0) {
-  .col.@{prefix}-@{i} {
-    width: calc(
-      ((100% - ((@cols - 1) * @gutter)) / @cols) * @i
-      + (@gutter * (@i - 1))
-    );
-  }
-  .generate-prefixed-spans(@prefix, (@i - 1), @cols);
-}
-
-// Generates prefixed offset classes: .col.xs-offset-1, .col.md-offset-4, etc.
-// Uses "no @margin in calc" math (container padding handled via border-box).
-.generate-prefixed-offsets(@prefix, @i, @cols) when (@i > 0) {
-  .col.@{prefix}-offset-@{i} {
-    margin-inline-start: calc(
-      ((100% - ((@cols - 1) * @gutter)) / @cols) * @i
-      + (@gutter * @i)
-    );
-  }
-  .generate-prefixed-offsets(@prefix, (@i - 1), @cols);
-}
-
-// ------------------------------------------------------------
-// Grid structure
-// ------------------------------------------------------------
-.grid-row(@gutter) {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: @gutter;
-  row-gap: @gutter;
-}
-
-.grid-container(@max-width, @padding-inline) {
-  margin-inline: auto;
-  max-width: @max-width;
-  padding-inline: @padding-inline;
-  box-sizing: border-box;
-}
-
-.grid {
-  .row { .grid-row(@gutter); }
-  .col { flex: 0 0 auto; }
-}
-
-// xs: 375–599px
-@media (min-width: @xs-min) and (max-width: @xs-max) {
-  @xs-cols: 4;
-  @xs-padding: 16px;
-
-  .grid {
-    .container { .grid-container(100%, @xs-padding); }
-    .generate-prefixed-spans(xs, @xs-cols, @xs-cols);
-    .generate-prefixed-offsets(xs, (@xs-cols - 1), @xs-cols); // xs-offset-1..3
-  }
-}
-
-// fluid for in-between sizes: 600–1279px
-@media (min-width: @md-min) and (max-width: @md-max) {
-  @md-cols: 12;
-  @md-padding: clamp(16px, 3vw, 32px);
-
-  .grid {
-    .container { .grid-container(100%, @md-padding); }
-    .generate-prefixed-spans(md, @md-cols, @md-cols);
-    .generate-prefixed-offsets(md, (@md-cols - 1), @md-cols); // md-offset-1..11
-  }
-}
-
-// lg: ≥1280px
-@media (min-width: @lg-min) {
-  @lg-cols: 12;
-  @lg-padding: 32px;
-
-  .grid {
-    .container { .grid-container(@lg-min, @lg-padding); }
-    .generate-prefixed-spans(lg, @lg-cols, @lg-cols);
-    .generate-prefixed-offsets(lg, (@lg-cols - 1), @lg-cols); // lg-offset-1..11
-  }
-}
 
 // Reusables
 button.link-button {
@@ -285,8 +201,6 @@ footer#tb-footer {
     margin-block: @gutter @space-36;
 
     #site-header-nav {
-
-
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -308,6 +222,96 @@ footer#tb-footer {
         // The design looks like a solid color.
         // background-image: linear-gradient(to top, var(--text-icon-base) 100%, rgba(86, 106, 146, 0.5) -175%), linear-gradient(to bottom, #feffff, #58c9ff);
 
+        @media (min-width: @md) {
+            display: grid;
+            grid-template-rows: 1fr;
+            grid-template-columns: auto auto auto;
+
+            #nav-link-home {
+                grid-column-start: 1;
+                grid-row-start: 1;
+                z-index: 9;
+            }
+        }
+
+
+        #nav-menu {
+            display: grid;
+            grid-template-rows: 0fr;
+            transition: grid-template-rows 0.1s ease-out;
+
+            background: var(--nav-bg-color);
+
+            position: absolute;
+            top: @space-48;
+            right: @space-18;
+
+            border-radius: 0 0 @space-9 @space-9;
+
+            @media (min-width: @md) {
+                display: grid;
+                // Force overlap so that we can center the nav links
+                grid-template-columns: subgrid;
+                grid-template-rows: subgrid;
+                grid-column: 1 / -1;
+                grid-row-start: 1;
+
+
+                position: relative;
+                top: unset;
+                right: unset;
+
+                .nav-item-join-button {
+                    align-self: flex-end;
+                }
+            }
+
+
+            ul {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+                overflow: hidden;
+                li:first-child {
+                    display: none;
+                }
+
+                @media (min-width: @md) {
+                    outline: 5px solid red;
+                    display: grid;
+                    // grid-template-columns: subgrid;
+                    grid-template-rows: subgrid;
+                    grid-column: 1 / -1;
+                    grid-template-columns: 1fr auto auto auto 1fr;
+
+                    li:first-child {
+                        display: block;
+                    }
+
+                    // width: 100%;
+                    li:last-child {
+                        justify-self: end;  // Pushes last item to the right
+                    }
+
+                }
+            }
+
+            li {
+                display: block;
+                padding-inline: @gutter;
+                margin-block: @gutter;
+
+                a {
+                    color: var(--text-icon-base);
+                    text-decoration: none;
+                    &:visited {
+                        color: var(--text-icon-base);
+                    }
+                }
+
+            }
+        }
+
         .hamburger-btn {
             cursor: pointer;
 
@@ -320,8 +324,8 @@ footer#tb-footer {
             background-color: var(--nav-bg-color);
             border: 0;
 
-            @media (max-width: @md-max) {
-                display: block;
+            @media (min-width: @md) {
+                display: none;
             }
         }
 
@@ -347,42 +351,6 @@ footer#tb-footer {
             grid-template-rows: 1fr;
 
         }
-        #nav-menu {
-            display: grid;
-            grid-template-rows: 0fr;
-            transition: grid-template-rows 0.1s ease-out;
-
-            background: var(--nav-bg-color);
-
-            position: absolute;
-            top: @space-48;
-            right: @space-18;
-
-            border-radius: 0 0 @space-9 @space-9;
-
-            ul {
-                list-style: none;
-                padding: 0;
-                margin: 0;
-                overflow: hidden;
-            }
-
-            li {
-                display: block;
-                padding-inline: @gutter;
-                margin-block: @gutter;
-
-                a {
-                    color: var(--text-icon-base);
-                    text-decoration: none;
-                    &:visited {
-                        color: var(--text-icon-base);
-                    }
-                }
-
-            }
-        }
-
 
     }
 }
@@ -394,6 +362,10 @@ header#masthead {
     --color-left-blue: #b4e7ff;
     --color-right-blue: rgba(180, 231, 255, 0.9);
     --color-mid-left-purple: rgba(221, 180, 254, 0.7);
+
+    // @media (min-width: @md) {
+    //     display: grid;
+    // }
 
     .hero-image {
         margin: 0 auto;
