--- a/sites/tb.pro/includes/base/footer.html
+++ b/sites/tb.pro/includes/base/footer.html
@@ -11,7 +11,9 @@
     </div>
   </div>
   <div id="moz-nav">
-    <a id="moz-link-home" href="#">[moz logo]</a>
+    <a id="moz-link-home" href="#">
+      {{ svg('mozilla-lockup-white-rgb') }}
+    </a>
     <div class="moz-nav-links">
       <a href="#">Privacy Policy</a>
       <a href="#">Cookies</a>
