--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -1,5 +1,17 @@
 @import "tbpro/base.less";
 
+// Constrain all main blocks to the largest breakpoint.
+#masthead,
+#features,
+#reasons,
+#quotes,
+#details,
+#faq {
+        max-width: @lg;
+        margin-inline: auto;
+
+}
+
 header#masthead {
     --hero-img: url('/media/img/thunderbird/tbpro/orb-graphic-hi-res.png');
     --button-text-color: #1A202C;
@@ -114,7 +126,7 @@ header#masthead {
 section#features {
     padding-bottom: @space-72;
 
-    @media (min-width: @md-max) {
+    @media (min-width: @lg) {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
@@ -147,7 +159,7 @@ section#features {
         // For mobile layout, space above a feature card, if there's a previous one.
         &+.feature-card {
             margin-top: @gutter;
-            @media (min-width: @md-max) {
+            @media (min-width: @lg) {
                 margin-top: 0;
             }
         }
@@ -201,7 +213,7 @@ section#features {
 
     }
 
-    @media (min-width: @md-max) {
+    @media (min-width: @lg) {
         // First card retains stacked layout.
         .feature-card:not(:first-child) {
             display: grid;
@@ -284,7 +296,7 @@ section#reasons {
 section#faq {
     padding-block: @space-36 @space-72;
 
-    @media (min-width: @md-max) {
+    @media (min-width: @lg) {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
 
@@ -299,7 +311,7 @@ section#faq {
         font-size: 2.5rem;
         line-height: 1.2;
 
-        @media (min-width: @md-max) {
+        @media (min-width: @lg) {
             padding-right: @space-144;
         }
     }
@@ -350,7 +362,7 @@ section#details {
     padding-inline: @gutter;
     padding-block: @space-36;
 
-    @media (min-width: @md-max) {
+    @media (min-width: @lg) {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         align-items: center;
@@ -368,7 +380,7 @@ section#details {
     }
 
     .subscription-header {
-        @media (min-width: @md-max) {
+        @media (min-width: @lg) {
             padding-right: @space-96;
             grid-column: 1 / 3;
         }
@@ -386,7 +398,7 @@ section#details {
         grid-template-rows: 1fr auto;
         place-items: center;
 
-        @media (min-width: @md-max) {
+        @media (min-width: @lg) {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
             grid-template-rows: auto;
@@ -402,7 +414,7 @@ section#details {
             margin-block: 0 @space-24;
             width: 100%;
 
-            @media (min-width: @md-max) {
+            @media (min-width: @lg) {
                 grid-column: 4 / -1;
             }
 
@@ -412,7 +424,7 @@ section#details {
 
             p {
                 text-align: center;
-                @media (min-width: @md-max) {
+                @media (min-width: @lg) {
                     text-align: left
                 }
             }
@@ -431,7 +443,7 @@ section#details {
 
             outline: 1px solid red;
 
-            @media (min-width: @md-max) {
+            @media (min-width: @lg) {
                 grid-column: 1 / 4;
                 // display: grid;
                 // grid-template-rows: repeat(4, auto);
